@@ -12,8 +12,6 @@ package sim.util;
 
 public class Interval
     {
-    private static final long serialVersionUID = 1;
-
     public Interval(long min, long max)
         {
         this.min = new Long(min);
@@ -35,4 +33,8 @@ public class Interval
     public Number getMin() { return min; }
     public Number getMax() { return max; }
     public boolean isDouble() { return isDouble; }
+    
+    public boolean contains(Number val) { return contains(val.doubleValue()); }
+    public boolean contains(double val) { return (val >= min.doubleValue() && val <= max.doubleValue()); }
+
     }
