@@ -2354,3 +2354,5 @@ Version 17
 	Made all classes in sim.util.distributions Serializable
 	Added a fixed serialVerUID (=1) to all Serializable classes
 	Various tweaks and fixes.  Thanks to Richard Legendi <rlegendi@aitia.ai>
+	Added Interval.contains(Number) and Interval.contains(doube).  Thanks to
+		Benjamin Axelrod <baxelrod@irobot.com>
